--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-# elm-package generated files
+.idea/
+
 elm-stuff/
-# elm-repl generated files
 repl-temp-*
 
-js/app.js
+node_modules/
+npm-debug.log
+
+dist/
